--- a/src/Umbraco.Web.UI.Client/package.json
+++ b/src/Umbraco.Web.UI.Client/package.json
@@ -47,6 +47,7 @@
     "ng-file-upload": "12.2.13",
     "nouislider": "15.5.0",
     "npm": "^6.14.7",
+    "sortablejs": "^1.15.0",
     "spectrum-colorpicker2": "2.0.8",
     "tinymce": "4.9.11",
     "typeahead.js": "0.11.1",
